--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^5.2.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.4",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "echo '\nCorrecting styles...' && prettier --write \"src/**/*.{js,ts,tsx,scss}\"",
+    "lint": "echo '\nChecking for TS errors...' && eslint 'src/**/*.tsx' 'src/**/*.ts'"
   },
   "eslintConfig": {
     "extends": [
