BF-1: continued initial setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
         "dom",
         "dom.iterable",
         "esnext"
-      ]
+      ],
+      "esModuleInterop": true,
+      "jsx": "react"
     },
     "include": [
       "src"
