--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.1.8",
     "prettier": "^3.2.4",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.1",
