--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "module": "NodeNext",
       "moduleResolution": "NodeNext",
+      "resolveJsonModule": true,
       "baseUrl": "src",
       "outDir": "dist",
       "sourceMap": true,
